GPC/tests/examples/fail/ifelse.gpc

void ifelse() {

    if (true) {
        int i = 4;
    } else {
        return j;
    }

}
